Fixed Apple Swift logo

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ permalink: /
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.5.38
+                    Nexss Programmer 2.5.39
                 </div>
                 <div class="text_3">
                     The innovative and evolutionary tool for the programmers. <br>
@@ -304,7 +304,7 @@ permalink: /
                 <a target="_blank" title="Programming language: Scheme" href="http://www.scheme-reports.org"><img src="logos/scheme.png" alt="Scheme"></a>
             </div>
                         <div>
-                <a target="_blank" title="Programming language: Swift" href="https://www.swift.org"><img src="logos/scala.png" alt="Swift"></a>
+                <a target="_blank" title="Programming language: Swift" href="https://www.swift.org"><img src="logos/swift.png" alt="Swift"></a>
             </div>
                         <div>
                 <a target="_blank" title="Programming language: TCL/TK" href="https://www.tcl.tk/"><img src="logos/tcl_tk.png" alt="TCL/TK"></a>
