--- a/pl/nexss-programmer-jezyki-programowania.html
+++ b/pl/nexss-programmer-jezyki-programowania.html
@@ -511,7 +511,7 @@ Wszystkie strony i kontakty wyświetlone są poniżej.</p>
             </td>
           </tr>
                     <tr>
-            <td><a target="_blank" title="programming language: Swift" href="https://www.swift.org"><img width="50" src="logos/scala.png"></a></td>
+            <td><a target="_blank" title="programming language: Swift" href="https://www.swift.org"><img width="50" src="logos/swift.png"></a></td>
             <td><b>Swift</b></td>
             <td>Martin Odersky</td>
             <td>2003</td>
