--- a/easy-install-nexss-programmer.html
+++ b/easy-install-nexss-programmer.html
@@ -143,7 +143,7 @@ permalink: /easy-install-nexss-programmer.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.5.38</span>
+      <span>Nexss Programmer 2.5.39</span>
       Open Source
     </div>
     <a href="programmer.html" class="btn btn__green">Documentation</a>
@@ -154,7 +154,7 @@ permalink: /easy-install-nexss-programmer.html
     <div>
       <div>
         <h2>Open Source</h2>
-        <h3>Install Nexss Programmer 2.5.38 Open Source</h3>
+        <h3>Install Nexss Programmer 2.5.39 Open Source</h3>
 
         <h4>Through NPM - <b>Linux, MacOS, Windows</b></h4>
           <p style="color:#666;font-size:smaller">note: Linux and MacOS
@@ -344,7 +344,7 @@ permalink: /easy-install-nexss-programmer.html
                 <a target="_blank" title="Programming language: Scheme" href="http://www.scheme-reports.org"><img src="logos/scheme.png" alt="Scheme"></a>
             </div>
                         <div>
-                <a target="_blank" title="Programming language: Swift" href="https://www.swift.org"><img src="logos/scala.png" alt="Swift"></a>
+                <a target="_blank" title="Programming language: Swift" href="https://www.swift.org"><img src="logos/swift.png" alt="Swift"></a>
             </div>
                         <div>
                 <a target="_blank" title="Programming language: TCL/TK" href="https://www.tcl.tk/"><img src="logos/tcl_tk.png" alt="TCL/TK"></a>
