--- a/en/nexss-programming-languages.html
+++ b/en/nexss-programming-languages.html
@@ -512,7 +512,7 @@ If you're the maintainer of a the language or technology not listed / implemente
             </td>
           </tr>
                     <tr>
-            <td><a target="_blank" title="programming language: Swift" href="https://www.swift.org"><img width="50" src="logos/scala.png"></a></td>
+            <td><a target="_blank" title="programming language: Swift" href="https://www.swift.org"><img width="50" src="logos/swift.png"></a></td>
             <td><b>Swift</b></td>
             <td>Martin Odersky</td>
             <td>2003</td>
