--- a/en/nexss-programmer-features.html
+++ b/en/nexss-programmer-features.html
@@ -86,6 +86,9 @@ permalink: /en/nexss-programmer-features.html
                 <a href="en/index.html#services">services</a>
             </li>
             <li>
+                <a href="en/nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -143,7 +146,7 @@ permalink: /en/nexss-programmer-features.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.5.39</span>
+      <span>Nexss Programmer 2.5.40</span>
       Features
     </div>
     <a href="en/programmer.html" class="btn btn__green">Documentation</a>
@@ -372,6 +375,9 @@ nexss myprogram.php # compile php program</code></pre>
         </li> -->
         <li>
           <a href="en/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="en/nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
