--- a/nexss-programming-languages.html
+++ b/nexss-programming-languages.html
@@ -86,6 +86,9 @@ permalink: /nexss-programming-languages.html
                 <a href="index.html#services">services</a>
             </li>
             <li>
+                <a href="nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="nexss-blog.html">blog</a>
             </li>
             <li>
@@ -605,6 +608,9 @@ If you're the maintainer of a the language or technology not listed / implemente
         </li> -->
         <li>
           <a href="nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
