--- a/pl/404.html
+++ b/pl/404.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Nexss Programmer - Introduction"
-permalink: /pl/11_blog-nexss-programmer/introduction/nexss-blog.html
+title: ""
+permalink: /pl/404.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /pl/11_blog-nexss-programmer/introduction/nexss-blog.html
 </script>
 
   <title>
-    BLOG Nexss Programmer - Introduction
+    
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Introduction - Nexss Programmer Blog">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Nexss Programmer - Introduction">
+  <meta property="og:description" content="">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -56,11 +56,11 @@ permalink: /pl/11_blog-nexss-programmer/introduction/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/nexss-blog.html">EN</a>
+                <a href="/en/404.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-blog.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/404.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -130,98 +130,17 @@ permalink: /pl/11_blog-nexss-programmer/introduction/nexss-blog.html
       <div class="header__bottom">
     </div>
     </header>
-                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/github.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
-<script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', (event) => {
-        // below was: pre code -> code
-        document.querySelectorAll('code').forEach((block) => {
-            hljs.highlightBlock(block);
-        });
-        // var y = document.querySelectorAll("pre code");
-        // for (var i = 0; i < y.length; i++) {
-        //   y[i].innerHTML = y[i].innerHTML.replace("\n", "");
-        // }
-    });
-</script><div class="block" id="nexssPage">
-  <div class="center">
-    <div class="block__title">
-      <span>Nexss Programmer </span>
-      The Programming Blog
+                <div class="center clearfix">
+    <div class="text wow fadeInRight">
+        <div class="block__title  wow bounceInDown">
+            <span>Strona nie istnieje</span>
+            404
+        </div>
+        <p><br><br>
+            Strona, której szukasz nie została znaleziona.<br><br><br><br>
+        </p>
     </div>
-    <div class="row">
-      <div class="column1">
-                <b>Welcome</b>
-        <ul>
-                    <li><a href="pl/0_Welcome/news/nexss-blog.html">News</a></li>
-                  </ul>
-                <b>Nexss Programmer</b>
-        <ul>
-                    <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage</a></li>
-                  </ul>
-                <b>Node.js</b>
-        <ul>
-                    <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias</a></li>
-                  </ul>
-                <b>Blender 3D</b>
-        <ul>
-                    <li><a href="pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates</a></li>
-                    <li><a href="pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
-                  </ul>
-                <b>Natron</b>
-        <ul>
-                    <li><a href="pl/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
-                  </ul>
-                <b>Our Free Packages</b>
-        <ul>
-                    <li><a href="pl/969_Our-free-packages/introduction/nexss-blog.html">Introduction</a></li>
-                    <li><a href="pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages</a></li>
-                  </ul>
-              </div>
-      <div class="column2">
-        <h2>Introduction</h2>
-<p>Welcome to the Nexss Programmer Blog. Here you will find more information about how to use the <strong>Nexss Programmer</strong>.</p>
-<hr>
-<p><strong>Nexss Programmer</strong> is for people who are starting their career in programming, but also for the professionals. You can also learn about older programming languages that are not so popular anymore. Nexss has many tools and a lot of functionalities to help you gather as much knowledge as possible to become better programmer. It also allow to compose many languages and has a lot of innovative functionality.</p>
-<p>Now <a href="pl/nexss-programmer-jezyki-programowania.html">51 programming languages</a> are implemented in the <strong>Free/Open Source</strong> Nexss Programmer.</p>
-<hr>
-<p>We will be adding here tutorials, practical examples and much more.</p>
-      </div>
-    </div>
-  </div>
-  <style>
-  .column1 {
-    float: left;
-    width: 20%;
-  }
-
-  .column2 {
-    float: left;
-    width: 80%;
-
-  }
-
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-</style>
-<script>
-    var links = document.links;
-
-for (var i = 0, linksLength = links.length; i < linksLength; i++) {
-  if (links[i].hostname != window.location.hostname) {
-    links[i].target = "_blank";
-  }
-}
-
-</script>
-</div>
-    
+</div>    
         <!-- footer -->
     <div class="push"></div>
   </div>
