--- a/pl/faq-najczesciej-zadawane-pytania.html
+++ b/pl/faq-najczesciej-zadawane-pytania.html
@@ -86,6 +86,9 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -331,6 +334,9 @@ permalink: /pl/faq-najczesciej-zadawane-pytania.html
         </li> -->
         <li>
           <a href="pl/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="pl/nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
