--- a/en/nexss-blog.html
+++ b/en/nexss-blog.html
@@ -86,6 +86,9 @@ permalink: /en/nexss-blog.html
                 <a href="en/index.html#services">services</a>
             </li>
             <li>
+                <a href="en/nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="en/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -251,6 +254,9 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
         </li> -->
         <li>
           <a href="en/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="en/nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
