--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ permalink: /
                 <a href="index.html#services">services</a>
             </li>
             <li>
+                <a href="nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="nexss-blog.html">blog</a>
             </li>
             <li>
@@ -132,7 +135,7 @@ permalink: /
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.5.39
+                    Nexss Programmer 2.5.40
                 </div>
                 <div class="text_3">
                     The innovative and evolutionary tool for the programmers. <br>
@@ -470,6 +473,9 @@ permalink: /
         </li> -->
         <li>
           <a href="nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
