--- a/nexss-portfolio.html
+++ b/nexss-portfolio.html
@@ -86,6 +86,9 @@ permalink: /nexss-portfolio.html
                 <a href="index.html#services">services</a>
             </li>
             <li>
+                <a href="nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="nexss-blog.html">blog</a>
             </li>
             <li>
@@ -612,6 +615,9 @@ permalink: /nexss-portfolio.html
         </li> -->
         <li>
           <a href="nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
