--- a/pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
+++ b/pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
@@ -86,6 +86,9 @@ permalink: /pl/969_Our-free-packages/list-of-free-packages/nexss-blog.html
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -233,6 +236,9 @@ for (var i = 0, linksLength = links.length; i < linksLength; i++) {
         </li> -->
         <li>
           <a href="pl/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="pl/nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
