--- a/pl/index.html
+++ b/pl/index.html
@@ -88,6 +88,9 @@ permalink: /pl/index.html
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -132,7 +135,7 @@ permalink: /pl/index.html
                     Open Source
                 </div>
                 <div class="text_2">
-                    Nexss Programmer 2.5.39
+                    Nexss Programmer 2.5.40
                 </div>
                 <div class="text_3">
                     Innowacyjne i ewolucyjne narzędzie dla programistów. <br>
@@ -470,6 +473,9 @@ permalink: /pl/index.html
         </li> -->
         <li>
           <a href="pl/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="pl/nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
