--- a/pl/latwa-instalacja-nexss-programmer.html
+++ b/pl/latwa-instalacja-nexss-programmer.html
@@ -86,6 +86,9 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
+                <a href="pl/nexss-careers.html">careers</a>
+            </li>
+            <li>
                 <a href="pl/nexss-blog.html">blog</a>
             </li>
             <li>
@@ -143,7 +146,7 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
 </script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Nexss Programmer 2.5.39</span>
+      <span>Nexss Programmer 2.5.40</span>
       Open Source
     </div>
     <a href="pl/programmer.html" class="btn btn__green">Dokumentacja</a>
@@ -154,7 +157,7 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
     <div>
       <div>
         <h2>Open Source</h2>
-        <h3>Zainstaluj Nexss Programmer 2.5.39 Open Source</h3>
+        <h3>Zainstaluj Nexss Programmer 2.5.40 Open Source</h3>
 
         <h4>Poprzez NPM - <b>Linux, MacOS, Windows</b></h4>
           <p style="color:#666;font-size:smaller">note: Linux i MacOS
@@ -413,6 +416,9 @@ permalink: /pl/latwa-instalacja-nexss-programmer.html
         </li> -->
         <li>
           <a href="pl/nexss-blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="pl/nexss-careers.html">Careers</a>
         </li>
         <li>
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
