--- a/nexss-careers.html
+++ b/nexss-careers.html
@@ -1,5 +1,5 @@
 ---
-title: "Portfolio - Nexss.com"
+title: "Careers - Nexss.com"
 permalink: /nexss-careers.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,15 +13,15 @@ permalink: /nexss-careers.html
 </script>
 
   <title>
-    Portfolio - Nexss.com
+    Careers - Nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="portfolio,nexss,examples">
-  <meta name="description" content="Porfolio of the Nexss.com">
+  <meta name="keywords" content="careers,job,career">
+  <meta name="description" content="Job Openings at Nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Portfolio - Nexss.com">
+  <meta property="og:description" content="Careers - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
