--- a/pl/nexss-careers.html
+++ b/pl/nexss-careers.html
@@ -1,5 +1,5 @@
 ---
-title: "Portfolio - Nexss.com"
+title: "Careers - Nexss.com"
 permalink: /pl/nexss-careers.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,15 +13,15 @@ permalink: /pl/nexss-careers.html
 </script>
 
   <title>
-    Portfolio - Nexss.com
+    Careers - Nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="portfolio,nexss,examples">
-  <meta name="description" content="Porfolio of the Nexss.com">
+  <meta name="keywords" content="careers,job,career">
+  <meta name="description" content="Job Openings at Nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Portfolio - Nexss.com">
+  <meta property="og:description" content="Careers - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -133,7 +133,7 @@ permalink: /pl/nexss-careers.html
                 <div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Careers </span>
+      <span>Kariera </span>
       Job Openings
     </div>
     <div>
@@ -226,7 +226,7 @@ Our fb: <a href="https://www.facebook.com/nexsscom">https://www.facebook.com/nex
           <a href="pl/nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="pl/nexss-careers.html">Careers</a>
+          <a href="pl/nexss-careers.html">Kariera</a>
         </li>
         <li>
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
