--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Node.js - Module_alias"
-permalink: /en/21_Node.js/module_alias/nexss-blog.html
+title: "Careers - Nexss.com"
+permalink: /en/nexss-career.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /en/21_Node.js/module_alias/nexss-blog.html
 </script>
 
   <title>
-    BLOG Node.js - Module_alias
+    Careers - Nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Module_alias - Nexss Programmer Blog">
+  <meta name="keywords" content="careers,job,career">
+  <meta name="description" content="Job Openings at Nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Node.js - Module_alias">
+  <meta property="og:description" content="Careers - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -56,11 +56,11 @@ permalink: /en/21_Node.js/module_alias/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/nexss-career.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -130,113 +130,55 @@ permalink: /en/21_Node.js/module_alias/nexss-blog.html
       <div class="header__bottom">
     </div>
     </header>
-                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/github.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
-<script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', (event) => {
-        // below was: pre code -> code
-        document.querySelectorAll('code').forEach((block) => {
-            hljs.highlightBlock(block);
-        });
-        // var y = document.querySelectorAll("pre code");
-        // for (var i = 0; i < y.length; i++) {
-        //   y[i].innerHTML = y[i].innerHTML.replace("\n", "");
-        // }
-    });
-</script><div class="block" id="nexssPage">
+                <div class="block" id="nexssPage">
   <div class="center">
-    <div class="block__title">
-      <span>Nexss Programmer </span>
-      The Programming Blog
+    <div class="block__title  wow bounceInDown">
+      <span>Career </span>
+      Job Openings
     </div>
-    <div class="row">
-      <div class="column1">
-                <b>Welcome</b>
-        <ul>
-                    <li><a href="en/0_Welcome/news/nexss-blog.html">News</a></li>
-                  </ul>
-                <b>Nexss Programmer</b>
-        <ul>
-                    <li><a href="en/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
-                    <li><a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
-                    <li><a href="en/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage</a></li>
-                  </ul>
-                <b>Node.js</b>
-        <ul>
-                    <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias</a></li>
-                  </ul>
-                <b>Blender 3D</b>
-        <ul>
-                    <li><a href="en/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates</a></li>
-                    <li><a href="en/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
-                  </ul>
-                <b>Natron</b>
-        <ul>
-                    <li><a href="en/639_blog-natron/nexss-programmer-nodes/nexss-blog.html">Nexss Programmer Nodes</a></li>
-                  </ul>
-                <b>Our Free Packages</b>
-        <ul>
-                    <li><a href="en/969_Our-free-packages/introduction/nexss-blog.html">Introduction</a></li>
-                    <li><a href="en/969_Our-free-packages/list-of-free-packages/nexss-blog.html">List Of Free Packages</a></li>
-                  </ul>
-              </div>
-      <div class="column2">
-        <h1>Module Alias</h1>
+    <div>
+      <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
+<p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
+      <div>
+        <h3>Open Source Software Developer - Intern</h3>
+<p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
+<p>If you would like to:</p>
 <ul>
-<li>package: <strong>module-alias</strong> - <a href="https://github.com/ilearnio/module-alias">https://github.com/ilearnio/module-alias</a></li>
+<li>Developing innovative <em>open source</em> tools and libraries with: <strong>Nexss Programmer</strong>, <strong>NFT</strong>, <strong>Machine Learning</strong> and more <em>innovative solutions</em></li>
+<li>Create reusable code and components</li>
+<li>Optimize applications for maximum speed and scalability</li>
 </ul>
-<p>Great package to cleanup/organize the includes/imports. Also is very handy to develop custom packages. Please see below. We are using the <strong>../nexsspackages</strong> folder to keep our modules outside the folder and not installing them all the time.</p>
-<pre><code class="language-sh">npm i module-alias</code></pre>
-<p>In the package.json setup aliases:</p>
-<pre><code class="language-json">// package.json
-{
-  "name": "mypackage",
-  //...
-  "_moduleAliases": {
-    "@root": ".",
-    "@nexssp": "../nexsspackages"
-  }
-}</code></pre>
-<p>In the program</p>
-<pre><code class="language-js">require("module-alias/register");
-const os = require("@nexssp/os"); // in the ../nexsspackages folder we have git repos of our modules</code></pre>
-<p>or through program</p>
-<pre><code class="language-js">const moduleAlias = require("module-alias");
-moduleAlias.addAlias("@nexssp", __dirname + "../nexsspackages");</code></pre>
+<h4>Preferred Qualifications</h4>
+<ul>
+<li>Programming skills in <strong>ANY</strong> language,</li>
+</ul>
+<h4>Nice to have</h4>
+<ul>
+<li><strong>NodeJS</strong> AND/OR <strong>TypeScript</strong></li>
+<li><em>Git</em></li>
+<li><em>GraphQL</em></li>
+<li><em>Prisma</em></li>
+<li><em>Docker</em></li>
+<li><em>MySQL</em>, <em>SQLite</em></li>
+<li>Basic understanding of HTML, CSS</li>
+</ul>
+<h4>Benefits</h4>
+<p>Developing innovative tools and applications</p>
       </div>
     </div>
+    <div>
+      <h2>Spontaneous application</h2>
+<p>We are always looking for great talents, so if you don't see any position which match with your qualifications please send us a CV and we will contact you. <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
+    </div>
+
+    <div>
+      <p><br></p>
+<h2>Equal Opportunity Employer</h2>
+<p><em><strong>Nexss.com</strong> is an Equal Opportunity Employer. Qualified applicants are considered for employment without regard to race, color, age, national origin, religion, marital status, sex, sexual orientation, gender identity, gender expression, genetics, disability, protected veteran status or any other basis prohibited by law. We are committed to a diverse and inclusive workplace.</em></p>
+    </div>
+
   </div>
-  <style>
-  .column1 {
-    float: left;
-    width: 20%;
-  }
-
-  .column2 {
-    float: left;
-    width: 80%;
-
-  }
-
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-</style>
-<script>
-    var links = document.links;
-
-for (var i = 0, linksLength = links.length; i < linksLength; i++) {
-  if (links[i].hostname != window.location.hostname) {
-    links[i].target = "_blank";
-  }
-}
-
-</script>
-</div>
-    
+</div>    
         <!-- footer -->
     <div class="push"></div>
   </div>
