--- a/easy-install-nexss-programmer.html
+++ b/easy-install-nexss-programmer.html
@@ -86,7 +86,7 @@ permalink: /easy-install-nexss-programmer.html
                 <a href="index.html#services">services</a>
             </li>
             <li>
-                <a href="nexss-careers.html">careers</a>
+                <a href="nexss-career.html">career</a>
             </li>
             <li>
                 <a href="nexss-blog.html">blog</a>
@@ -418,13 +418,13 @@ permalink: /easy-install-nexss-programmer.html
           <a href="nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="nexss-careers.html">Careers</a>
+          <a href="nexss-career.html">Career</a>
         </li>
         <li>
           <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="programmer.html/Nexss-Programmer-Programming-Languages">Supported
+          <a href="nexss-programming-languages.html">Supported
             programming languages</a>
         </li>
       </ul>
