--- a/en/nexss-programming-languages.html
+++ b/en/nexss-programming-languages.html
@@ -86,7 +86,7 @@ permalink: /en/nexss-programming-languages.html
                 <a href="en/index.html#services">services</a>
             </li>
             <li>
-                <a href="en/nexss-careers.html">careers</a>
+                <a href="en/nexss-career.html">career</a>
             </li>
             <li>
                 <a href="en/nexss-blog.html">blog</a>
@@ -610,13 +610,13 @@ If you're the maintainer of a the language or technology not listed / implemente
           <a href="en/nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="en/nexss-careers.html">Careers</a>
+          <a href="en/nexss-career.html">Career</a>
         </li>
         <li>
           <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/programmer.html/Nexss-Programmer-Programming-Languages">Supported
+          <a href="en/nexss-programming-languages.html">Supported
             programming languages</a>
         </li>
       </ul>
