--- a/pl/nexss-programming-languages.html
+++ b/pl/nexss-programming-languages.html
@@ -86,7 +86,7 @@ permalink: /pl/nexss-programming-languages.html
                 <a href="pl/index.html#services">usługi</a>
             </li>
             <li>
-                <a href="pl/nexss-careers.html">careers</a>
+                <a href="pl/nexss-career.html">career</a>
             </li>
             <li>
                 <a href="pl/nexss-blog.html">blog</a>
@@ -609,13 +609,13 @@ Wszystkie strony i kontakty wyświetlone są poniżej.</p>
           <a href="pl/nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="pl/nexss-careers.html">Careers</a>
+          <a href="pl/nexss-career.html">Career</a>
         </li>
         <li>
           <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="pl/programmer.html/Nexss-Programmer-Programming-Languages">Supported
+          <a href="pl/nexss-programmer-jezyki-programowania.html">Supported
             programming languages</a>
         </li>
       </ul>
