new way of presenting job openings

--- a/en/nexss-career-job-details.html
+++ b/en/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
 title: "Career / Job Openings - Nexss.com"
-permalink: /en/nexss-career.html
+permalink: /en/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -56,11 +56,11 @@ permalink: /en/nexss-career.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/nexss-career.html">PL</a>
+                <a class="selected" href="/pl/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -134,37 +134,12 @@ permalink: /en/nexss-career.html
   <div class="center">
     <div class="block__title  wow bounceInDown">
       <span>Career </span>
-      Job Openings
+      Job Details
     </div>
-    <div style="font-size:larger;color:#1567c9;">
-      Nexss's vision is a world that everyone is able to write at least basic programs. We develop innovative and
-      evolutionary products. Check our job openings and if you have any questions don't hesitate to contact us.
-    </div>
-
     <div>
-
-      <div>
-                <hr>
-        <h3><a href="en/open-source-software-developer-intern/index1/nexss-career-job-details.html">Open Source Software Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="en/open-source-art-designer-intern/index2/nexss-career-job-details.html">Open Source Art Designer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="en/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html">Open Source Content &amp; SEO Specialist - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-              </div>
-
-      <hr>
+            <p>This job offer does not exist.</p>
+            <hr>      <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
+<p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
     </div>
     <div>
       <h2>Spontaneous application</h2>
