--- a/nexss-career.html
+++ b/nexss-career.html
@@ -1,5 +1,5 @@
 ---
-title: "Careers - Nexss.com"
+title: "Career / Job Openings - Nexss.com"
 permalink: /nexss-career.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,15 +13,15 @@ permalink: /nexss-career.html
 </script>
 
   <title>
-    Careers - Nexss.com
+    Career / Job Openings - Nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="careers,job,career">
-  <meta name="description" content="Job Openings at Nexss.com">
+  <meta name="keywords" content="careers,job,career,job openings">
+  <meta name="description" content="Check our job Openings at Nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Careers - Nexss.com">
+  <meta property="og:description" content="Career / Job Openings - Nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -140,75 +140,30 @@ permalink: /nexss-career.html
       Nexss's vision is a world that everyone is able to write at least basic programs. We develop innovative and
       evolutionary products. Check our job openings and if you have any questions don't hesitate to contact us.
     </div>
-    <hr>
+
     <div>
-      <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
-<p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
+
       <div>
-        <hr>
-        <h3>Open Source Software Developer - Intern</h3>
-<p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
-<p>If you would like to:</p>
-<ul>
-<li>Learn new technologies or services based on business demands and industry trends,</li>
-<li>Developing innovative <em>open source</em> tools and libraries with: <strong>Nexss Programmer</strong>, <strong>NFT</strong>, <strong>Machine Learning</strong> and more <em>innovative solutions</em>,</li>
-<li>Create reusable code and components,</li>
-<li>Optimize applications for maximum speed and scalability.</li>
-</ul>
-<h4>Preferred Qualifications</h4>
-<ul>
-<li>Programming skills in <strong>ANY</strong> language,</li>
-</ul>
-<h4>Nice to have</h4>
-<ul>
-<li><strong>NodeJS</strong> and/or <strong>TypeScript</strong> and/or <strong>PHP</strong></li>
-<li><em>AWS</em></li>
-<li><em>Git</em></li>
-<li><em>GraphQL</em></li>
-<li><em>Prisma</em></li>
-<li><em>Docker</em></li>
-<li><em>React</em> or <em>Angular</em></li>
-<li><em>MySQL</em>, <em>SQLite</em></li>
-<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
-</ul>
-<h4>Benefits</h4>
-<p>Developing innovative tools and applications</p>
-        <hr>
-        <h3>Open Source Art Designer - Intern</h3>
-<p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
-<h4>Preferred Qualifications</h4>
-<ul>
-<li><em>Artistic mind</em> and skills</li>
-</ul>
-<h4>Nice to have</h4>
-<ul>
-<li>One of <strong>Photoshop</strong>, <strong>Gimp</strong>, <strong>Krita</strong> or any graphical package of your choice</li>
-<li><strong>Natron</strong></li>
-<li><strong>Blender 3D</strong></li>
-<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
-</ul>
-<h4>Benefits</h4>
-<p>Developing <strong>art</strong> for innovative tools and applications</p>
-        <hr>
-        <h3>Open Source Content &amp; SEO Specialist - Intern</h3>
-<p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
-<h4>Preferred Qualifications</h4>
-<ul>
-<li>Clear writing style and editing skills</li>
-</ul>
-<h4>Nice to have</h4>
-<ul>
-<li>SEO</li>
-<li>Optimization for Search Engines</li>
-</ul>
-<h4>Benefits</h4>
-<p>Developing <strong>seo and content</strong> for innovative tools and applications</p>
-      </div>
-      <hr>
-      <div>
-        <h5>Intern Information</h5>
-<p>An internship with Nexss.com lasts 3-6 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
-      </div>
+                <hr>
+        <h3><a href="open-source-software-developer-intern/index1/nexss-career-job-details.html">Open Source Software Developer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="open-source-art-designer-intern/index2/nexss-career-job-details.html">Open Source Art Designer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html">Open Source Content &amp; SEO Specialist - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+              </div>
+
       <hr>
     </div>
     <div>
