--- a/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
+++ b/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Career / Job Openings - Nexss.com"
-permalink: /en/nexss-career.html
+title: "JOB Openings - Open Source Content &amp; SEO Specialist - Intern - nexss.com"
+permalink: /open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /en/nexss-career.html
 </script>
 
   <title>
-    Career / Job Openings - Nexss.com
+    JOB Openings - Open Source Content &amp; SEO Specialist - Intern - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Check our job Openings at Nexss.com">
+  <meta name="description" content="Open Source Content &amp; SEO Specialist - Intern - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Career / Job Openings - Nexss.com">
+  <meta property="og:description" content="JOB Openings - Open Source Content &amp; SEO Specialist - Intern - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -56,11 +56,11 @@ permalink: /en/nexss-career.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/nexss-career.html">PL</a>
+                <a class="selected" href="/pl/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -80,26 +80,26 @@ permalink: /en/nexss-career.html
     <div class="nav clearfix">
         <ul>
             <li>
-                <a href="en/faq.html">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="en/index.html#services">services</a>
+                <a href="index.html#services">services</a>
             </li>
             <li>
-                <a href="en/nexss-career.html">career</a>
+                <a href="nexss-career.html">career</a>
             </li>
             <li>
-                <a href="en/nexss-blog.html">blog</a>
+                <a href="nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="en/nexss-portfolio.html">portfolio</a>
+                <a href="nexss-portfolio.html">portfolio</a>
             </li>
             <li>
-                <a href="en/index.html#contacts">contact</a>
+                <a href="index.html#contacts">contact</a>
             </li>
         </ul>
         <div class="btn__wrap__center">
-            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -109,19 +109,19 @@ permalink: /en/nexss-career.html
     <div class="phone_nav">
         <ul>
             <li>
-                <a href="en/faq.html">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="en/index.html#services">services</a>
+                <a href="index.html#services">services</a>
             </li>
             <li>
-                <a href="en/nexss-blog.html">blog</a>
+                <a href="nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="en/nexss-portfolio.html">porfolio</a>
+                <a href="nexss-portfolio.html">porfolio</a>
             </li>
             <li>
-                <a href="en/index.html#contacts">contact</a>
+                <a href="index.html#contacts">contact</a>
             </li>
         </ul>
     </div>
@@ -134,37 +134,32 @@ permalink: /en/nexss-career.html
   <div class="center">
     <div class="block__title  wow bounceInDown">
       <span>Career </span>
-      Job Openings
+      Job Details
     </div>
-    <div style="font-size:larger;color:#1567c9;">
-      Nexss's vision is a world that everyone is able to write at least basic programs. We develop innovative and
-      evolutionary products. Check our job openings and if you have any questions don't hesitate to contact us.
-    </div>
-
     <div>
-
-      <div>
-                <hr>
-        <h3><a href="en/open-source-software-developer-intern/index1/nexss-career-job-details.html">Open Source Software Developer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
+            <div>
+        <h1>Open Source Content &amp; SEO Specialist - Intern</h1>
+        <br>
+        <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
-                <hr>
-        <h3><a href="en/open-source-art-designer-intern/index2/nexss-career-job-details.html">Open Source Art Designer - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-                <hr>
-        <h3><a href="en/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html">Open Source Content &amp; SEO Specialist - Intern</a>
-          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
-        </h3>
-        <p>
-        </p>
-              </div>
-
-      <hr>
+        
+                <h4>Preferred Qualifications</h4>
+        <ul>
+<li>Clear writing style and editing skills</li>
+</ul>
+                        <h4>Nice To Have</h4>
+        <p>SEO / Search Engine Optimization</p>
+                        <h4>Benefits</h4>
+        <p>Developing <b>seo and content</b> for innovative tools and applications</p>
+        
+        <hr>
+        <div>
+          <h5>Intern Information</h5>
+<p>An internship with Nexss.com lasts 3-6 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
+        </div>
+      </div>
+            <hr>      <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
+<p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
     </div>
     <div>
       <h2>Spontaneous application</h2>
@@ -204,22 +199,22 @@ permalink: /en/nexss-career.html
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
         <!-- <li>
-          <a href="en/privacy-policy.html">Privacy Policy</a>
+          <a href="privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
-          <a href="en/terms-and-conditions.html">Terms and Conditions</a>
+          <a href="terms-and-conditions.html">Terms and Conditions</a>
         </li> -->
         <li>
-          <a href="en/nexss-blog.html">Blog</a>
+          <a href="nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="en/nexss-career.html">Career</a>
+          <a href="nexss-career.html">Career</a>
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/nexss-programming-languages.html">Supported
+          <a href="nexss-programming-languages.html">Supported
             programming languages</a>
         </li>
       </ul>
@@ -237,7 +232,7 @@ permalink: /en/nexss-career.html
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
     <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
