--- a/open-source-software-developer-intern/index1/nexss-career-job-details.html
+++ b/open-source-software-developer-intern/index1/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Careers - Nexss.com"
-permalink: /pl/nexss-careers.html
+title: "JOB Openings - Open Source Software Developer - Intern - nexss.com"
+permalink: /open-source-software-developer-intern/index1/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /pl/nexss-careers.html
 </script>
 
   <title>
-    Careers - Nexss.com
+    JOB Openings - Open Source Software Developer - Intern - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="careers,job,career">
-  <meta name="description" content="Job Openings at Nexss.com">
+  <meta name="keywords" content="careers,job,career,job openings">
+  <meta name="description" content="Open Source Software Developer - Intern - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Careers - Nexss.com">
+  <meta property="og:description" content="JOB Openings - Open Source Software Developer - Intern - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -49,18 +49,18 @@ permalink: /pl/nexss-careers.html
             </li>
                         <!-- <li class="hideSmall">
                 <i class="fa fa-map-marker"></i>
-                86-005, Prądki, Polska
+                86-005, Prądki, Poland
             </li> -->
 
         </ul>
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/nexss-careers.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/nexss-career-job-details.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-careers.html">PL</a>
+                <a class="selected" href="/pl/nexss-career-job-details.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -80,26 +80,26 @@ permalink: /pl/nexss-careers.html
     <div class="nav clearfix">
         <ul>
             <li>
-                <a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="pl/index.html#services">usługi</a>
+                <a href="index.html#services">services</a>
             </li>
             <li>
-                <a href="pl/nexss-careers.html">careers</a>
+                <a href="nexss-career.html">career</a>
             </li>
             <li>
-                <a href="pl/nexss-blog.html">blog</a>
+                <a href="nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="pl/nexss-portfolio.html">portfolio</a>
+                <a href="nexss-portfolio.html">portfolio</a>
             </li>
             <li>
-                <a href="pl/index.html#contacts">kontakt</a>
+                <a href="index.html#contacts">contact</a>
             </li>
         </ul>
         <div class="btn__wrap__center">
-            <a href="pl/latwa-instalacja-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -109,19 +109,19 @@ permalink: /pl/nexss-careers.html
     <div class="phone_nav">
         <ul>
             <li>
-                <a href="pl/faq-najczesciej-zadawane-pytania.html">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="pl/index.html#services">usługi</a>
+                <a href="index.html#services">services</a>
             </li>
             <li>
-                <a href="pl/nexss-blog.html">blog</a>
+                <a href="nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="pl/nexss-portfolio.html">porfolio</a>
+                <a href="nexss-portfolio.html">porfolio</a>
             </li>
             <li>
-                <a href="pl/index.html#contacts">kontakt</a>
+                <a href="index.html#contacts">contact</a>
             </li>
         </ul>
     </div>
@@ -133,81 +133,79 @@ permalink: /pl/nexss-careers.html
                 <div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title  wow bounceInDown">
-      <span>Kariera </span>
-      Job Openings
+      <span>Career </span>
+      Job Details
     </div>
     <div>
-      <h1>Software Developer - Intern</h1>
-<p><strong style="color:green">Full/Part Time</strong>, <strong>REMOTE</strong></p>
-<h2>Preferred Qualifications</h2>
+            <div>
+        <h1>Open Source Software Developer - Intern</h1>
+        <br>
+        <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </p>
+        <p>If you would like to:</p>
 <ul>
+<li>Learn new technologies or services based on business demands and industry trends,</li>
+<li>Developing innovative <em>open source</em> tools and libraries with: <strong>Nexss Programmer</strong>, <strong>NFT</strong>, <strong>Machine Learning</strong> and more <em>innovative solutions</em>,</li>
+<li>Create reusable code and components,</li>
+<li>Optimize applications for maximum speed and scalability.</li>
+</ul>
+                <h4>Preferred Qualifications</h4>
+        <ul>
 <li>Programming skills in <strong>ANY</strong> language,</li>
-<li>English OR Polish language</li>
-<li>Able to work 10-20 hours per week if interning during the semester</li>
-<li>Able to work 40 hours per week if interning during the summer</li>
 </ul>
-<h2>Nice to have</h2>
-<ul>
-<li><strong>NodeJS</strong> AND/OR <strong>TypeScript</strong></li>
-<li>Git</li>
-<li>GraphQL</li>
-<li>Prisma</li>
-<li>Docker</li>
-<li>MySQL, SQLite</li>
-<li>Basic understanding of HTML, CSS</li>
+                        <h4>Nice To Have</h4>
+        <ul>
+<li><strong>NodeJS</strong> and/or <strong>TypeScript</strong> and/or <strong>PHP</strong></li>
+<li><em>AWS</em></li>
+<li><em>Git</em></li>
+<li><em>GraphQL</em></li>
+<li><em>Prisma</em></li>
+<li><em>Docker</em></li>
+<li><em>React</em> or <em>Angular</em></li>
+<li><em>MySQL</em>, <em>SQLite</em></li>
+<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
 </ul>
-<h2>Benefits</h2>
-<ul>
-<li>
-<p>flexible working hours,</p>
-</li>
-<li>
-<p><strong>You will improve Your:</strong></p>
-</li>
-<li><em>innovative thinking</em>,</li>
-<li><strong>NodeJS</strong>, <strong>TypeScript</strong> and/or improve skills of other programming languages,</li>
-<li>ability in the development multi-os programs using innovative ways,</li>
-<li>creating multios cli tools and libraries,</li>
-<li>you will be writing <strong><em>open source</em></strong> code on the license MIT/GPL</li>
-</ul>
-<h2>You will develop</h2>
-<ul>
-<li>Innovative tools and libraries with: <strong>NFT</strong>, <strong>Nexss Programmer</strong>, <strong>Machine Learning</strong> and latest <em>innovative solutions</em> more</li>
-</ul>
-<h2>Salary</h2>
+                        <h4>Benefits</h4>
+        <p>Developing innovative tools and applications</p>
+        
+        <hr>
+        <div>
+          <h5>Intern Information</h5>
 <p>An internship with Nexss.com lasts 3-6 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
-<p>(We will try to answer for all your emails, but we can't promise that we will)
-If you are interested in this position please send your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
-<p>If you are already using Nexss.com products or services, please also like our facebook profile.
-Our fb: <a href="https://www.facebook.com/nexsscom">https://www.facebook.com/nexsscom</a></p>
+        </div>
+      </div>
+            <hr>      <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
+<p>If you are interested in any of the positions please send to us your CV (with some examples of your work) at: <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
+    </div>
+    <div>
+      <h2>Spontaneous application</h2>
+<p>We are always looking for great talents, so if you don't see any position which match with your qualifications please send us a CV and we will contact you. <a href="mailto:mapoart@gmail.com">mapoart@gmail.com</a></p>
+    </div>
+    <div>
+      <p><br></p>
+<h2>Equal Opportunity Employer</h2>
 <p><em><strong>Nexss.com</strong> is an Equal Opportunity Employer. Qualified applicants are considered for employment without regard to race, color, age, national origin, religion, marital status, sex, sexual orientation, gender identity, gender expression, genetics, disability, protected veteran status or any other basis prohibited by law. We are committed to a diverse and inclusive workplace.</em></p>
     </div>
   </div>
 </div>
-<!-- <style>
-  .list {
-    line-height: 1em;
+<style>
+  h3 {
+    background-color: bisque;
   }
 
-  .list .elTitle {
+  h4 {
+    background-color: #eee;
+    color: #523211;
     font-size: 1em;
+    line-height: 1.1em;
     font-weight: bold;
   }
 
-  .list div:first-child {
-    margin: 10px;
+  h5 {
+    background-color: darkseagreen;
+    font-size: larger;
   }
-
-  .since {
-    color: #0036ff;
-    margin-top: -10px;
-  }
-
-
-  p {
-    margin-bottom: 0;
-  }
-</style> -->    
+</style>    
         <!-- footer -->
     <div class="push"></div>
   </div>
@@ -217,22 +215,22 @@ Our fb: <a href="https://www.facebook.com/nexsscom">https://www.facebook.com/nex
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
         <!-- <li>
-          <a href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>
+          <a href="privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
-          <a href="pl/regulamin.html">Regulamin</a>
+          <a href="terms-and-conditions.html">Terms and Conditions</a>
         </li> -->
         <li>
-          <a href="pl/nexss-blog.html">Blog</a>
+          <a href="nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="pl/nexss-careers.html">Kariera</a>
+          <a href="nexss-career.html">Career</a>
         </li>
         <li>
-          <a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="pl/programmer.html/Nexss-Programmer-Programming-Languages">Supported
+          <a href="nexss-programming-languages.html">Supported
             programming languages</a>
         </li>
       </ul>
@@ -249,8 +247,8 @@ Our fb: <a href="https://www.facebook.com/nexsscom">https://www.facebook.com/nex
     Copyright © 2008 - 2021 Nexss.com, Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img height="10" src="assets/images/flagPL.jpg">
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
-    <b>Nexss.com</b> używa ciasteczka do rejestrowania danych statystycznych.<br>
-    Więcej tutaj: <a style="color:yellow;" target="_blank" href="pl/polityka-prywatnosci.html">Polityka Prywatności</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
