new way of presenting job openings

--- a/en/open-source-video-editor/index5/nexss-career-job-details.html
+++ b/en/open-source-video-editor/index5/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Open Source Art Designer - Intern - JOB Openings - nexss.com"
-permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.html
+title: "Open Source Video Editor - JOB Openings - nexss.com"
+permalink: /en/open-source-video-editor/index5/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
 </script>
 
   <title>
-    Open Source Art Designer - Intern - JOB Openings - nexss.com
+    Open Source Video Editor - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Open Source Art Designer - Intern - remote - nexss.com">
+  <meta name="description" content="Open Source Video Editor - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Open Source Art Designer - Intern - JOB Openings - nexss.com">
+  <meta property="og:description" content="Open Source Video Editor - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -138,24 +138,21 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
     </div>
     <div>
             <div>
-        <h1>Open Source Art Designer - Intern</h1>
+        <h1>Open Source Video Editor</h1>
         <br>
         <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
         
                 <h4>Preferred Qualifications</h4>
         <ul>
-<li><em>Artistic mind</em> and skills</li>
+<li>Ability to make videos</li>
 </ul>
                         <h4>Nice To Have</h4>
         <ul>
-<li>One of <strong>Photoshop</strong>, <strong>Gimp</strong>, <strong>Krita</strong> or any graphical package of your choice</li>
-<li><strong>Natron</strong></li>
-<li><strong>Blender 3D</strong></li>
-<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
+<li><strong>Natron</strong> or <strong>Blender</strong> experience</li>
 </ul>
                         <h4>Benefits</h4>
-        <p>Developing <strong>art</strong> for innovative tools and applications</p>
+        <p>Develop <b>videos</b> for innovative tools and applications</p>
         
         <hr>
         <div>
