--- a/en/nexss-career.html
+++ b/en/nexss-career.html
@@ -138,7 +138,8 @@ permalink: /en/nexss-career.html
     </div>
     <div style="font-size:larger;color:#1567c9;">
       Nexss's vision is a world that everyone is able to write at least basic programs. We develop innovative and
-      evolutionary products. Check our job openings and if you have any questions don't hesitate to contact us.
+      evolutionary products. We will give you more details at the later stage. Check our job openings and if you have
+      any questions don't hesitate to contact us.
     </div>
 
     <div>
@@ -158,6 +159,18 @@ permalink: /en/nexss-career.html
         </p>
                 <hr>
         <h3><a href="en/open-source-content-and-seo-specialist-intern/index3/nexss-career-job-details.html">Open Source Content &amp; SEO Specialist - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="en/open-source-sound-designer-intern/index4/nexss-career-job-details.html">Open Source Sound Designer - Intern</a>
+          <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
+        </h3>
+        <p>
+        </p>
+                <hr>
+        <h3><a href="en/open-source-video-editor/index5/nexss-career-job-details.html">Open Source Video Editor</a>
           <strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </h3>
         <p>
