--- a/en/open-source-software-developer-intern/index1/nexss-career-job-details.html
+++ b/en/open-source-software-developer-intern/index1/nexss-career-job-details.html
@@ -1,5 +1,5 @@
 ---
-title: "JOB Openings - Open Source Software Developer - Intern - nexss.com"
+title: "Open Source Software Developer - Intern - JOB Openings - nexss.com"
 permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
@@ -13,7 +13,7 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
 </script>
 
   <title>
-    JOB Openings - Open Source Software Developer - Intern - nexss.com
+    Open Source Software Developer - Intern - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -21,7 +21,7 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
   <meta name="keywords" content="careers,job,career,job openings">
   <meta name="description" content="Open Source Software Developer - Intern - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="JOB Openings - Open Source Software Developer - Intern - nexss.com">
+  <meta property="og:description" content="Open Source Software Developer - Intern - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -171,7 +171,7 @@ permalink: /en/open-source-software-developer-intern/index1/nexss-career-job-det
         <hr>
         <div>
           <h5>Intern Information</h5>
-<p>An internship with Nexss.com lasts 3-6 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
+<p>An internship with Nexss.com lasts 2-12 months. There is no financial compensation provided during the internship, but if you will match with upcoming projects we will offer you a position after your internship.</p>
         </div>
       </div>
             <hr>      <p><strong>NOTE:</strong> We will try to answer for all your emails, but we can't promise that we will - it depends on the number of submissions.</p>
