--- a/open-source-video-editor/index5/nexss-career-job-details.html
+++ b/open-source-video-editor/index5/nexss-career-job-details.html
@@ -1,6 +1,6 @@
 ---
-title: "Open Source Art Designer - Intern - JOB Openings - nexss.com"
-permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.html
+title: "Open Source Video Editor - JOB Openings - nexss.com"
+permalink: /open-source-video-editor/index5/nexss-career-job-details.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,15 +13,15 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
 </script>
 
   <title>
-    Open Source Art Designer - Intern - JOB Openings - nexss.com
+    Open Source Video Editor - JOB Openings - nexss.com
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="careers,job,career,job openings">
-  <meta name="description" content="Open Source Art Designer - Intern - remote - nexss.com">
+  <meta name="description" content="Open Source Video Editor - remote - nexss.com">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="Open Source Art Designer - Intern - JOB Openings - nexss.com">
+  <meta property="og:description" content="Open Source Video Editor - JOB Openings - nexss.com">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -80,26 +80,26 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
     <div class="nav clearfix">
         <ul>
             <li>
-                <a href="en/faq.html">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="en/index.html#services">services</a>
+                <a href="index.html#services">services</a>
             </li>
             <li>
-                <a href="en/nexss-career.html">career</a>
+                <a href="nexss-career.html">career</a>
             </li>
             <li>
-                <a href="en/nexss-blog.html">blog</a>
+                <a href="nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="en/nexss-portfolio.html">portfolio</a>
+                <a href="nexss-portfolio.html">portfolio</a>
             </li>
             <li>
-                <a href="en/index.html#contacts">contact</a>
+                <a href="index.html#contacts">contact</a>
             </li>
         </ul>
         <div class="btn__wrap__center">
-            <a href="en/easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
+            <a href="easy-install-nexss-programmer.html" class="btn btn__medium btn__green">NEXSS
                 PROGRAMMER</a>
         </div>
     </div>
@@ -109,19 +109,19 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
     <div class="phone_nav">
         <ul>
             <li>
-                <a href="en/faq.html">FAQ</a>
+                <a href="faq.html">FAQ</a>
             </li>
             <li>
-                <a href="en/index.html#services">services</a>
+                <a href="index.html#services">services</a>
             </li>
             <li>
-                <a href="en/nexss-blog.html">blog</a>
+                <a href="nexss-blog.html">blog</a>
             </li>
             <li>
-                <a href="en/nexss-portfolio.html">porfolio</a>
+                <a href="nexss-portfolio.html">porfolio</a>
             </li>
             <li>
-                <a href="en/index.html#contacts">contact</a>
+                <a href="index.html#contacts">contact</a>
             </li>
         </ul>
     </div>
@@ -138,24 +138,21 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
     </div>
     <div>
             <div>
-        <h1>Open Source Art Designer - Intern</h1>
+        <h1>Open Source Video Editor</h1>
         <br>
         <p><strong style="color:green">FULL/PART TIME</strong>, <strong>REMOTE</strong>
         </p>
         
                 <h4>Preferred Qualifications</h4>
         <ul>
-<li><em>Artistic mind</em> and skills</li>
+<li>Ability to make videos</li>
 </ul>
                         <h4>Nice To Have</h4>
         <ul>
-<li>One of <strong>Photoshop</strong>, <strong>Gimp</strong>, <strong>Krita</strong> or any graphical package of your choice</li>
-<li><strong>Natron</strong></li>
-<li><strong>Blender 3D</strong></li>
-<li>Basic understanding of <strong>HTML</strong>, <strong>CSS</strong></li>
+<li><strong>Natron</strong> or <strong>Blender</strong> experience</li>
 </ul>
                         <h4>Benefits</h4>
-        <p>Developing <strong>art</strong> for innovative tools and applications</p>
+        <p>Develop <b>videos</b> for innovative tools and applications</p>
         
         <hr>
         <div>
@@ -204,22 +201,22 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <ul class="footer__menu tl mb-space">
         <!-- <li>
-          <a href="en/privacy-policy.html">Privacy Policy</a>
+          <a href="privacy-policy.html">Privacy Policy</a>
         </li>
         <li>
-          <a href="en/terms-and-conditions.html">Terms and Conditions</a>
+          <a href="terms-and-conditions.html">Terms and Conditions</a>
         </li> -->
         <li>
-          <a href="en/nexss-blog.html">Blog</a>
+          <a href="nexss-blog.html">Blog</a>
         </li>
         <li>
-          <a href="en/nexss-career.html">Career</a>
+          <a href="nexss-career.html">Career</a>
         </li>
         <li>
-          <a href="en/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
+          <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a>
         </li>
         <li>
-          <a href="en/nexss-programming-languages.html">Supported
+          <a href="nexss-programming-languages.html">Supported
             programming languages</a>
         </li>
       </ul>
@@ -237,7 +234,7 @@ permalink: /en/open-source-art-designer-intern/index2/nexss-career-job-details.h
   </div>
   <div id="infoCookie" style="z-index:369369369;position:fixed;bottom:0;height:55px;background-color:black;width:100%;visibility:hidden;">
     <b>Nexss.com</b> website use cookies on this website to log statistics data.<br>
-    More here: <a style="color:yellow;" target="_blank" href="en/privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
+    More here: <a style="color:yellow;" target="_blank" href="privacy-policy.html">Privacy Policy</a>.<a id="acceptCookie" style="color: white; font-size: 20px; line-height: 30px; text-decoration: none;" href="javascript:void(0)">×</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 <script type="text/javascript">
